test/TestPhases/parser/invalid/importWrongBox.blc

import mymod "bl:package/a/b/file"

module

activity main()
end

